[package]
name = "test-stm32f042k6"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
stm32f0xx-hal = { version = "0.18.0", features = ["rt", "stm32-usbd", "stm32f042"] }
panic-semihosting = "0.6.0"
usb-device = "0.3.2"

[dev-dependencies]
usbd-serial = "0.2.2"
