[package]
name = "test-stm32f103c8"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
stm32f1xx-hal = { version = "0.10.0", features = ["rt", "stm32f103"] }
panic-semihosting = "0.6.0"
usb-device = "0.3.2"

[dev-dependencies]
usbd-serial = "0.2.2"
