[package]
name = "example-stm32f303vc"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
stm32f3xx-hal = { version = "0.2.3", features = ["rt", "stm32f303"] }
panic-semihosting = "0.5.2"
usb-device = "0.2.1"
stm32-usbd = { version = "0.2.1", features = ["stm32f303xc"] }

[patch.crates-io]
stm32-usbd = { path = "../../stm32-usbd" }
