[package]
name = "test-stm32f303vc"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32f3xx-hal = { version = "0.10.0", features = ["rt", "usb", "stm32f303xc"] }
panic-semihosting = "0.6.0"
usb-device = "0.3.2"

[dev-dependencies]
usbd-serial = "0.2.2"
