[package]
name    = "test-stm32l082xx"
version = "0.1.0"
authors = [
    "Hanno Braun <hanno@braun-embedded.com>",
    "Vadim Kaushan <admin@disasm.info>",
]
edition = "2018"


[dependencies]
cortex-m    = "0.6.3"
cortex-m-rt = "0.6.10"
usb-device  = "0.2.3"

[dependencies.stm32l0xx-hal]
version = "0.5.0"
features = ["rt", "stm32-usbd", "stm32l0x2"]
