[package]
name = "test-stm32l432kc"
version = "0.1.0"
authors = ["Vadim Kaushan <admin@disasm.info>"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.10"
stm32l4xx-hal = { version = "0.5.0", features = ["rt", "stm32-usbd", "stm32l4x2"] }
panic-semihosting = "0.5.3"
usb-device = "0.2.3"
cortex-m = "0.6.1"

[patch.crates-io]
stm32-usbd = { path = "../../stm32-usbd" }
